--- a/index.html
+++ b/index.html
@@ -2,9 +2,156 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>aboutClient</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/panabit.css">
+  <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
-	
+  <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+      <div class="container-fluid">
+        <!-- logo -->
+        <div class="navbar-header header-top">
+          <a class="navbar-brand header-brand" href="#"><img src="img/logo1.png" alt=""></a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="navbar-right">
+            <a href="#" class="btn btn-sm">免费试用</a>
+            <a href="#" class="btn btn-sm">申请加盟</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right header-top">
+            <li><a href="#">产品与解决方案</a></li>
+            <li><a href="#">渠道合作</a></li>
+            <li><a href="#">关于我们</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  <!-- header -->
+  <div class="content1 swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="img/panabit-banner1.jpg" alt="">
+          <div class="banner-title">
+            <h1>国内领先的网络应用层解决方案供应商</h1>
+            <p>基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="img/panabit-banner2.jpg" alt="">
+          <div class="banner-title">
+            <h1>iXCache内容缓存加速</h1>
+            <p>给我一点空间，我会将你的网络变成小宇宙</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="img/panabit-banner3.jpg" alt="">
+          <div class="banner-title">
+            <h1>Panalog运营商日志留存</h1>
+            <p>网络大数据基石，让网络开挂者无所遁形</p>
+          </div>
+        </div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+  <!-- main -->
+  <div class="main">
+    <section class="outer-section product">
+      <div class="row">
+        <div class="col-md-4">
+          <p>智能应用网关</p>
+          <p>Panabit</p>
+        </div>
+        <div class="col-md-4">
+          <p>内容缓存加速</p>
+          <p>iXCache</p>
+        </div>
+        <div class="col-md-4">
+          <p>数据存留审计</p>
+          <p>Panalog</p>
+        </div>
+      </div>
+    </section>
+    <section class="outer-section case">
+      <div class="container">
+        <div class="row case-nav">
+          <div class="content-title col-sm-4">解决方案</div>
+          <ul class="row col-sm-4 col-sm-offset-4">
+            <li class="col-md-3"><a href="">运营商</a></li>
+            <li class="col-md-3"><a href="">企业</a></li>
+            <li class="col-md-3"><a href="">小区</a></li>
+            <li class="col-md-3"><a href="">高校</a></li>
+          </ul>
+        </div>
+        <div class="row case-content">
+          <div class="col-md-3">
+            <img src="img/case1.jpg" alt="">
+            <p>中国移动网络游戏加速</p>
+          </div>
+          <div class="col-md-3">
+            <img src="img/case2.jpg" alt="">
+            <p>智能DNS管控在实际中应用</p>
+          </div>
+          <div class="col-md-3">
+            <img src="img/case3.jpg" alt="">
+            <p>网络大数据系统分析方案</p>
+          </div>
+          <div class="col-md-3">
+            <img src="img/case4.jpg" alt="">
+            <p>智能应用网关网络出口解决方案</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="outer-section news">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h1 class="content-title">新闻</h1>
+            <ul class="row">
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络123123123123123</a> </li><li class="col-md-3">4-17</li>
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>  
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <h1 class="content-title">软件下载</h1>
+            <ul class="row">
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信
+              管理局网络</a> </li><li class="col-md-3">4-17</li>
+              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
+            </ul>
+          </div>
+          <div class="col-md-4 img-containers">
+            <img src="img/news.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="outer-section bottom-promote">
+      <h1>免费体验派网产品</h1>
+      <button>现在注册</button>
+    </section>
+  </div>
+  <!-- footer -->
+  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=379 src="footer.html" frameborder=0></iframe> 
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/swiper-3.4.2.jquery.min.js"></script>
+<script>        
+  var mySwiper = new Swiper ('.swiper-container', {
+    loop: true,
+    autoplay : 5000,
+    // 如果需要分页器
+    pagination: '.swiper-pagination',
+    paginationType : 'bullets',
+    paginationClickable: true
+  })        
+</script>
 </body>
 </html>
