所有页面header和footer整理

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+  <nav class="navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
       <div class="container-fluid">
         <!-- logo -->
         <div class="navbar-header header-top">
@@ -20,8 +20,8 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="navbar-right">
-            <a href="#" class="btn btn-sm">免费试用</a>
-            <a href="#" class="btn btn-sm">申请加盟</a>
+            <a href="#" class="btn btn-pink">免费试用</a>
+            <a href="#" class="btn btn-pink">申请加盟</a>
           </div>
           <ul class="nav navbar-nav navbar-right header-top">
             <li><a href="#">产品与解决方案</a></li>
@@ -133,13 +133,9 @@
         </div>
       </div>
     </section>
-    <section class="outer-section bottom-promote">
-      <h1>免费体验派网产品</h1>
-      <button>现在注册</button>
-    </section>
   </div>
   <!-- footer -->
-  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=379 src="footer.html" frameborder=0></iframe> 
+  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/swiper-3.4.2.jquery.min.js"></script>
