--- a/footer.html
+++ b/footer.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
+  <section class="bottom-promote">
+    <h1>免费体验派网产品</h1>
+    <button>现在注册</button>
+  </section>
   <footer class="main-footer">
     <div class="container">
       <div class="row">
