--- a/solution.html
+++ b/solution.html
@@ -9,43 +9,21 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/solution.css">
-  <link rel="stylesheet" href="">
 </head>
 <body>
   <!-- header -->
-  <div>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- logo -->
-        <div class="navbar-header header-top">
-          <a class="navbar-brand header-brand" href="#"><img src="img/logo.png" alt=""></a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <div class="navbar-right">
-            <button type="submit" class="btn btn-info ">免费试用</button>
-            <button type="submit" class="btn btn-info">申请加盟</button>
-          </div>
-          <ul class="nav navbar-nav navbar-right header-top">
-            <li><a href="#">产品于解决方案</a></li>
-            <li><a href="#">渠道合作</a></li>
-            <li><a href="#">关于我们</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <!-- bottom-nav -->
-    <!-- <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-left">
-          <li><a href="#">公司简介</a></li>
-          <li><a href="#">联系我们</a></li>
-          <li><a href="#">招贤纳才</a></li>
-          <li><a href="#">最新动态</a></li>
-          <li><a href="#">荣誉客户</a></li>
-        </ul>
-      </div>
-    </nav> -->
-  </div>
+  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="#">公司简介</a></li>
+        <li><a href="#">联系我们</a></li>
+        <li><a href="#">招贤纳才</a></li>
+        <li><a href="#">最新动态</a></li>
+        <li><a href="#">荣誉客户</a></li>
+      </ul>
+    </div>
+  </nav>
   <!-- main -->
   <div class="main">
     <section class="outer-section">
@@ -100,80 +78,7 @@
       </div>
     </section>
   </div>
-  <!-- footer -->
-  <footer class="main-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">探索Panabit</h4>
-            <ul>
-              <li><a href="">为何选择派网</a></li>
-              <li><a href="">免费试用</a></li>
-              <li><a href="">产品</a></li>
-              <li><a href="">解决方案</a></li>
-              <li><a href="">客户案例</a></li>
-              <li><a href="">新闻</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">服务与支持</h4>
-            <ul>
-              <li><a href="">软件下载</a></li>
-              <li><a href="">渠道合作</a></li>
-              <li><a href="">论坛</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">合作伙伴</h4>
-            <ul>
-              <li><a href="">申请加盟</a></li>
-              <li><a href="">PN管理</a></li>
-              <li><a href="">网吧版后台</a></li>
-              <li><a href="">合作伙伴登陆</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">关于我们</h4>
-            <ul>
-              <li><a href="">公司简介</a></li>
-              <li><a href="">联系我们</a></li>
-              <li><a href="">招贤纳才</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <div class="title"><img src="img/footer-logo.png" alt=""></div>
-            <h4 class="title">关注我们</h4>
-            <div class="attention">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-</footer>
-<!-- Copyright -->
-  <div class="copyright">
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <span> © Copyright 2017 Panabit, inc. All rights reserved. 京ICP备14008283号  北京市海淀区丰慧中路7号新材料创业大厦B622-623    邮箱：webmaster@panabit.com </span>
-          </div>
-        </div>
-    </div>
-</div>
+  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
