主页标签添加链接

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="nav navbar-nav navbar-right header-top">
             <li><a href="#">产品与解决方案</a></li>
             <li><a href="#">渠道合作</a></li>
-            <li><a href="#">关于我们</a></li>
+            <li><a href="aboutIndex.html">关于我们</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
