抽离副nav，添加链接

--- a/header.html
+++ b/header.html
@@ -25,9 +25,9 @@
             <a href="#" class="btn btn-red">申请加盟</a>
           </div>
           <ul class="nav navbar-nav navbar-right header-top">
-            <li><a href="#">产品与解决方案</a></li>
-            <li><a href="#">渠道合作</a></li>
-            <li><a href="#">关于我们</a></li>
+            <li><a href="solution.html" target="_top">产品与解决方案</a></li>
+            <li><a href="productIsp.html" target="_top">渠道合作</a></li>
+            <li><a href="aboutIndex.html" target="_top">关于我们</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
