--- a/panalog.html
+++ b/panalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>aboutClient</title>
+	<title>合作渠道</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -11,17 +11,8 @@
 </head>
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">公司简介</a></li>
-        <li><a href="#">联系我们</a></li>
-        <li><a href="#">招贤纳才</a></li>
-        <li><a href="#">最新动态</a></li>
-        <li><a href="#">荣誉客户</a></li>
-      </ul>
-    </div>
-  </nav>
+  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
+scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
   <!-- main -->
   <div class="main">
     <section class="outer-section">
