--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -13,7 +13,10 @@
 </head>
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <nav class="navbar navbar-default">
+  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
+scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
+  
+  <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="#">运营商</a></li>
@@ -23,7 +26,7 @@
         <li><a href="#">SMB版</a></li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
   <!-- main -->
   <div class="main">
     <section class="outer-section">
