--- a/productSmb.html
+++ b/productSmb.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/product.css">
   <link rel="stylesheet" href="css/productAreas.css">
+  <link rel="stylesheet" href="css/productSmb.css">
 </head>
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
@@ -33,7 +34,7 @@ scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
       <div class="content1">
         <div>
           <h1 class="product-content-title">Panabit最好用的智能应用路由</h1>
-          <h1 class="product-content-subtitle">企业版</h1>
+          <h1 class="product-content-subtitle">SMB版</h1>
         </div>
       </div>
        <!-- 中间图片 -->
@@ -53,14 +54,29 @@ scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
     </section>
     <section class="outer-section">
       <div class="content3">
-        <h1 class="product-other-title">小区首选，宽带一体化运营</h1>
-        <p>Panabit小区版专门为小区宽带运营商量身定制的、以软件租赁模式为主的高性能、高可用性、功能丰富的网络出口一体优化解决方案。可适用于同时在线 80-8000人以下的小区宽带网络。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡、PPPoE、Radius 对接、共享检测、防封杀等丰富功能。</p>
+        <h1 class="product-other-title">千兆线速 上网行为</h1>
+        <p>Panabit 中小企业上网行为管理网关</p>
+        <p>最低带宽成本 最优上网感受 最佳管理效果 </p>
       </div>
     </section>
     <section class="outer-section">
-      <div class="content4">
-        <h1 class="product-title">性能卓越的出口一体化网关</h1>
-        <p>Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+      <div class="content-buy row">
+        <div class="col-md-6 buy-content">
+          <img src="img/number1.png" alt="">
+        </div>
+        <div class="col-md-6 buy-content">
+          <img src="img/number2.png" alt="">
+        </div>
+        <div class="row bottom">
+          <div class="row col-sm-6 buy-bottom">
+            <div class="col-md-6">购买</div>
+            <div class="col-md-6">说明</div>
+          </div>
+          <div class="row col-sm-6 buy-bottom">
+            <div class="col-md-6">购买</div>
+            <div class="col-md-6">说明</div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="outer-section case">
