优化footer,解决方案的页面去掉副nav

--- a/footer.html
+++ b/footer.html
@@ -23,12 +23,12 @@
           <div class="widget">
             <h4 class="title">探索Panabit</h4>
             <ul>
-              <li><a href="">为何选择派网</a></li>
-              <li><a href="">免费试用</a></li>
-              <li><a href="">产品</a></li>
-              <li><a href="">解决方案</a></li>
-              <li><a href="">客户案例</a></li>
-              <li><a href="">新闻</a></li>
+              <li><a href="" target="_top">为何选择派网</a></li>
+              <li><a href="" target="_top">免费试用</a></li>
+              <li><a href="" target="_top">产品</a></li>
+              <li><a href="" target="_top">解决方案</a></li>
+              <li><a href="" target="_top">客户案例</a></li>
+              <li><a href="" target="_top">新闻</a></li>
             </ul>
           </div>
         </div>
@@ -36,9 +36,9 @@
           <div class="widget">
             <h4 class="title">服务与支持</h4>
             <ul>
-              <li><a href="">软件下载</a></li>
-              <li><a href="">渠道合作</a></li>
-              <li><a href="">论坛</a></li>
+              <li><a href="" target="_top">软件下载</a></li>
+              <li><a href="" target="_top">渠道合作</a></li>
+              <li><a href="" target="_top">论坛</a></li>
             </ul>
           </div>
         </div>
@@ -46,10 +46,10 @@
           <div class="widget">
             <h4 class="title">合作伙伴</h4>
             <ul>
-              <li><a href="">申请加盟</a></li>
-              <li><a href="">PN管理</a></li>
-              <li><a href="">网吧版后台</a></li>
-              <li><a href="">合作伙伴登陆</a></li>
+              <li><a href="" target="_top">申请加盟</a></li>
+              <li><a href="" target="_top">PN管理</a></li>
+              <li><a href="" target="_top">网吧版后台</a></li>
+              <li><a href="" target="_top">合作伙伴登陆</a></li>
             </ul>
           </div>
         </div>
@@ -57,9 +57,9 @@
           <div class="widget">
             <h4 class="title">关于我们</h4>
             <ul>
-              <li><a target="_parent" href="./aboutNews.html">公司简介</a></li>
-              <li><a target="_parent" href="">联系我们</a></li>
-              <li><a target="_parent" href="">招贤纳才</a></li>
+              <li><a href="./aboutNews.html">公司简介</a></li>
+              <li><a href="" target="_top">联系我们</a></li>
+              <li><a href="" target="_top">招贤纳才</a></li>
             </ul>
           </div>
         </div>
