'公司简介的巨幕不需要滑动'

--- a/aboutIndex.html
+++ b/aboutIndex.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/aboutIndex.css">
-  <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
@@ -17,14 +16,8 @@
 scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
   <!-- main -->
   <div class="main">
-    <section class="outer-section content1">
-      <div class="swiper-container">
-          <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/banner2.jpg" alt=""></div>  
-              <div class="swiper-slide"><img src="img/banner1.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/banner3.jpg" alt=""></div>
-          </div>
-      </div>
+    <section class="outer-section content1 content1_banner">
+       公司简介 
     </section>
     <section class="outer-section content2">
       <div><img src="img/logo-sm.png" alt=""></div>
@@ -59,14 +52,5 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-  <script src="js/swiper-3.4.2.jquery.min.js"></script>
-  <script>        
-  var mySwiper = new Swiper ('.swiper-container', {
-    loop: true,
-    autoplay : 5000,
-    // 如果需要分页器
-    pagination: '.swiper-pagination'
-  })        
-  </script>
 </body>
 </html>
