--- a/header.html
+++ b/header.html
@@ -17,12 +17,12 @@
       <div class="container-fluid">
         <!-- logo -->
         <div class="navbar-header header-top">
-          <a class="navbar-brand header-brand" href="#"><img src="img/logo.png" alt=""></a>
+          <a class="navbar-brand header-brand" href="index.html" target="_top"><img src="img/logo.png" alt=""></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="navbar-right">
             <a href="#" class="btn btn-red">免费试用</a>
-            <a href="#" class="btn btn-red">申请加盟</a>
+            <a href="#" class="btn btn-border-red">申请加盟</a>
           </div>
           <ul class="nav navbar-nav navbar-right header-top">
             <li><a href="solution.html" target="_top">产品与解决方案</a></li>
