--- a/ixcache.html
+++ b/ixcache.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/product.css">
+  <link rel="stylesheet" href="css/ixcache.css">
 </head>
 <body>
   <!-- header -->
@@ -17,7 +19,126 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
   <!-- main -->
   <div class="main">
     <section class="outer-section">
-      <div class="outer-wrapper">
+      <div class="content1">
+        <div>
+          <h1 class="product-content-title">iXCache 让您的内容体验无限延伸</h1>
+          <h1 class="product-content-subtitle">配置简单，界面简洁，可轻松上手</h1>
+        </div>
+      </div>
+       <!-- 中间图片 -->
+      <div class="product-img">
+        <img src="img/computer.png" alt="">
+      </div>
+      <div class="content-bottom"></div>
+    </section>
+    <section>
+      <div class="content2">
+        <h1 class="content-title">视频秒开，应用秒下，不再是梦想！</h1>
+        <p>伴随互联网视频、音乐、手机更新和直播类应用兴起，HTTP流量重回互联网流量巅峰。iXCache帮助网络运营者锁定核心业务痛点，将更多HTTP重载内容下沉到最贴近用户的本网环境。
+在节省出口带宽节约成本的同时，极大提高内网用户特别是无线用户的网络使用感受。视频秒开，应用秒下，不再是梦想！配合Panabit网关独有的缓存牵引模式，iXCache可灵活部署在桥接、路由、PPPoE和NAT等复杂网络环境，提供单机10G的输出密度和多达128台的超级集群。全面的集群监控技术和分应用优化技术，为iXCache用户提供了无与伦比的使用感受。</p>
+        <ul class="row content2-bottom">
+          <li class="col-md-6">
+            <p>单机输出速度</p>
+            <h1 class="content-title">10G</h1>
+          </li>
+          <li class="col-md-6">
+            <p>超级集群</p>
+            <h1 class="content-title"><span>多达</span>128台</h1>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <div class="content3">
+        <h1 class="content-title">网络内容加速，超爽体验</h1>
+        <p>支持八大类资源缓存</p>
+        <ul class="row">
+          <li class="col-md-3">
+            <img src="img/ixchache-logo1.png" alt="">
+            <p>web视频</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo2.png" alt="">
+            <p>移动视频</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo3.png" alt="">
+            <p>web音乐</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo4.png" alt="">
+            <p>移动视频</p>
+          </li>
+          <li class="col-md-3 clear">
+            <img src="img/ixchache-logo5.png" alt="">
+            <p>软件下载</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo6.png" alt="">
+            <p>应用商店</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo7.png" alt="">
+            <p>游戏补丁</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo8.png" alt="">
+            <p>其他</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <div class="content4">
+        <h1 class="content-title">安装与使用</h1>
+        <ul class="row">
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">硬件配置</p>
+            <p class="col-md-9">CPU : 至少双核，支持超线程；<br>
+            内 存：至少4G；<br>
+            系统盘：一块，容量至少2G；<br>
+            数据盘：至少一块，单盘大小建议2-4T；<br>
+            网卡：两张，建议Intel型号；
+            </p>
+            <p class="bottom-text col-md-9 col-md-offset-3">专业版硬件推荐配置</p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">下载</p>
+            <p class="col-md-9">最新升级包<br>
+            一键安装ios下载</p>
+            <!-- <p class="col-md-9 col-md-offset-3"></p> -->
+            <p class="col-md-3 bottom-text-m">交流互动</p>
+            <p class="col-md-9 bottom-text-m">iXCache论坛版块<br>
+            iXCache常见问题答疑<br>
+            官方QQ群：61310125</p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">安装部署</p>
+            <p class="col-md-9">
+              <span>安装向导</span>    
+              <span>牵引模式部署</span><br>        
+              <span>镜像模式部署</span>        
+              <span>多台设备分布式部署</span>   
+            </p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">资源</p>
+            <p class="col-md-9">
+              <span>工作原理简介</span>    
+              <span>缓存资源列表</span><br>        
+              <span>加速效果预览</span>        
+              <span>界面预览</span>   
+            </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
   </div>
