--- a/panalog.html
+++ b/panalog.html
@@ -1,27 +1,153 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>合作渠道</title>
+  <meta charset="UTF-8">
+  <title>panalog</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/product.css">
+  <link rel="stylesheet" href="css/ixcache.css">
+  <link rel="stylesheet" href="css/panalog.css">
 </head>
 <body>
+  <!-- header -->
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
 scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
   <!-- main -->
   <div class="main">
     <section class="outer-section">
-      <div class="outer-wrapper">
+      <div class="content1">
+        <div>
+        <h1 class="product-content-title">Panalog唤起网络的一切记忆</h1>
+          <h1 class="product-content-subtitle">为您提供更全面的网络细节和大数据趋势的分析能力</h1>
+        </div>
+      </div>
+       <!-- 中间图片 -->
+      <div class="product-img">
+        <img src="img/computer1.png" alt="">
+      </div>
+      <div class="content-bottom"></div>
+    </section>
+    <section>
+      <div class="content2">
+        <h1 class="content-title">独有的云管控平台，是一线运维人员手中一把利器</h1>
+        <p>网络大数据是当前互联网业界最感兴趣的话题之一，然而网络原始数据并不是大数据，不能加工处理的日志数据也不是大数据。</p>
+        <p>
+          PanaLog可以收集用户为数众多的Panabit网关日志数据，包括Session数据、事件数据和身份数据，并对数据进行有效的加工处理，处理方式包括排名、分布、趋势和相似性。借助良好的分布式设计理念，PanaLog可以以集群方式线性扩大数据存储和处理能力，并为Hadoop等大数据处理平台提供raw data文件接口，展示充分的开放性。以流量概况、IP轨迹、TOP域名、应用流量流向图、URL地图、TOP用户、连接可视化分析和DNS可视化分析等为代表的内置分析工具，为用户提供了全面了解、分析和掌握网络细节和趋势的能力。更为Panabit用户提供独有的云管控平台，方便用户集中监控、管理在网的海量Panabit设备，是一线运维人员手中一把利器。
+        </p>
+        <ul class="row content2-bottom">
+          <li class="col-md-6">
+            <p>单机输出速度</p>
+            <h1 class="content-title">10G</h1>
+          </li>
+          <li class="col-md-6">
+            <p>超级集群</p>
+            <h1 class="content-title"><span>多达</span>128台</h1>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <div class="content3">
+        <h1 class="content-title">网络内容加速，超爽体验</h1>
+        <p>支持八大类资源缓存</p>
+        <ul class="row">
+          <li class="col-md-3">
+            <img src="img/ixchache-logo1.png" alt="">
+            <p>web视频</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo2.png" alt="">
+            <p>移动视频</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo3.png" alt="">
+            <p>web音乐</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo4.png" alt="">
+            <p>移动视频</p>
+          </li>
+          <li class="col-md-3 clear">
+            <img src="img/ixchache-logo5.png" alt="">
+            <p>软件下载</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo6.png" alt="">
+            <p>应用商店</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo7.png" alt="">
+            <p>游戏补丁</p>
+          </li>
+          <li class="col-md-3">
+            <img src="img/ixchache-logo8.png" alt="">
+            <p>其他</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <div class="content4">
+        <h1 class="content-title">安装与使用</h1>
+        <ul class="row">
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">硬件配置</p>
+            <p class="col-md-9">CPU : 至少双核，支持超线程；<br>
+            内 存：至少4G；<br>
+            系统盘：一块，容量至少2G；<br>
+            数据盘：至少一块，单盘大小建议2-4T；<br>
+            网卡：两张，建议Intel型号；
+            </p>
+            <p class="bottom-text col-md-9 col-md-offset-3">专业版硬件推荐配置</p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">下载</p>
+            <p class="col-md-9">最新升级包<br>
+            一键安装ios下载</p>
+            <!-- <p class="col-md-9 col-md-offset-3"></p> -->
+            <p class="col-md-3 bottom-text-m">交流互动</p>
+            <p class="col-md-9 bottom-text-m">iXCache论坛版块<br>
+            iXCache常见问题答疑<br>
+            官方QQ群：61310125</p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">安装部署</p>
+            <p class="col-md-9">
+              <span>安装向导</span>    
+              <span>牵引模式部署</span><br>        
+              <span>镜像模式部署</span>        
+              <span>多台设备分布式部署</span>   
+            </p>
+            </div>
+          </li>
+          <li class="col-sm-6 row">
+            <div>
+            <p class="col-md-3">资源</p>
+            <p class="col-md-9">
+              <span>工作原理简介</span>    
+              <span>缓存资源列表</span><br>        
+              <span>加速效果预览</span>        
+              <span>界面预览</span>   
+            </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
   </div>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
