--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
-  <section class="bottom-promote">
+  <section id="footerLink" class="bottom-promote">
     <h1>免费体验派网产品</h1>
     <button>现在注册</button>
   </section>
@@ -88,5 +88,12 @@
         </div>
     </div>
   </div>
+  <script>
+    let footerLink = document.querySelector('#footerLink');
+    footerLink.onclick = () => {
+      // window.location.href=""
+      console.log('点击')
+    }
+  </script>
 </body>
 </html>
