--- a/ixcache.html
+++ b/ixcache.html
@@ -13,9 +13,7 @@
 </head>
 <body>
   <!-- header -->
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
+  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
   <!-- main -->
   <div class="main">
     <section class="outer-section">
@@ -29,7 +27,6 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
       <div class="product-img">
         <img src="img/computer.png" alt="">
       </div>
-      <div class="content-bottom"></div>
     </section>
     <section>
       <div class="content2">
@@ -52,40 +49,43 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
       <div class="content3">
         <h1 class="content-title">网络内容加速，超爽体验</h1>
         <p>支持八大类资源缓存</p>
-        <ul class="row">
-          <li class="col-md-3">
-            <img src="img/ixchache-logo1.png" alt="">
-            <p>web视频</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo2.png" alt="">
-            <p>移动视频</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo3.png" alt="">
-            <p>web音乐</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo4.png" alt="">
-            <p>移动视频</p>
-          </li>
-          <li class="col-md-3 clear">
-            <img src="img/ixchache-logo5.png" alt="">
-            <p>软件下载</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo6.png" alt="">
-            <p>应用商店</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo7.png" alt="">
-            <p>游戏补丁</p>
-          </li>
-          <li class="col-md-3">
-            <img src="img/ixchache-logo8.png" alt="">
-            <p>其他</p>
-          </li>
-        </ul>
+        <div style="width: 1200px;margin:0 auto;">
+          <ul class="row">
+            <li class="col-md-3">
+              <img src="img/ixchache-logo1.png" alt="">
+              <p>web视频</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo2.png" alt="">
+              <p>移动视频</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo3.png" alt="">
+              <p>web音乐</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo4.png" alt="">
+              <p>移动视频</p>
+            </li>
+            <li class="col-md-3 clear">
+              <img src="img/ixchache-logo5.png" alt="">
+              <p>软件下载</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo6.png" alt="">
+              <p>应用商店</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo7.png" alt="">
+              <p>游戏补丁</p>
+            </li>
+            <li class="col-md-3">
+              <img src="img/ixchache-logo8.png" alt="">
+              <p>其他</p>
+            </li>
+          </ul>
+          
+        </div>
       </div>
     </section>
     <section>
@@ -94,7 +94,7 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
         <ul class="row">
           <li class="col-sm-6 row">
             <div>
-            <p class="col-md-3">硬件配置</p>
+              <p class="col-md-3"><span class="content4-item-title">硬件配置</span></p>
             <p class="col-md-9">CPU : 至少双核，支持超线程；<br>
             内 存：至少4G；<br>
             系统盘：一块，容量至少2G；<br>
@@ -106,11 +106,11 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
           </li>
           <li class="col-sm-6 row">
             <div>
-            <p class="col-md-3">下载</p>
+            <p class="col-md-3"><span class="content4-item-title">下载</span></p>
             <p class="col-md-9">最新升级包<br>
             一键安装ios下载</p>
             <!-- <p class="col-md-9 col-md-offset-3"></p> -->
-            <p class="col-md-3 bottom-text-m">交流互动</p>
+            <p class="col-md-3 bottom-text-m"><span class="content4-item-title">交流互动</span></p>
             <p class="col-md-9 bottom-text-m">iXCache论坛版块<br>
             iXCache常见问题答疑<br>
             官方QQ群：61310125</p>
@@ -118,7 +118,7 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
           </li>
           <li class="col-sm-6 row">
             <div>
-            <p class="col-md-3">安装部署</p>
+              <p class="col-md-3"><span class="content4-item-title">安装部署</span></p>
             <p class="col-md-9">
               <span>安装向导</span>    
               <span>牵引模式部署</span><br>        
@@ -129,7 +129,7 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
           </li>
           <li class="col-sm-6 row">
             <div>
-            <p class="col-md-3">资源</p>
+              <p class="col-md-3"><span class="content4-item-title">资源</span></p>
             <p class="col-md-9">
               <span>工作原理简介</span>    
               <span>缓存资源列表</span><br>        
