--- a/productSmb.html
+++ b/productSmb.html
@@ -42,13 +42,8 @@ scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
         <img src="img/product-areas.png" alt="">
       </div>
       <div class="content2">
-        <div>
-          <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
-          <ul class="row">
-            <li class="col-md-4"><img src="img/product-areas-block1.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block2.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block3.png" alt=""></li>
-          </ul>
+        <div style="width: 1000px; margin: 0 auto 80px; ">
+          <p>Panabit中小企业上网行为管理网关是全球领先、安全、稳定的中小企业上网行为管理网关。让中小企业不仅可以获得【最低带宽成本】，【最流畅上网享受】，【最大带机能力】，【最小采购成本】；而且还可以有效的防止上网人员进行无关的网络活动，杜绝带宽资源滥用，加快上网速率，提升工作效率；记录上网行为，防止PC中毒，智能数据分析提供可视化报表，为网络管理和优化提供决策依据。</p>
         </div>
       </div>
     </section>
