--- a/panalog.html
+++ b/panalog.html
@@ -10,14 +10,11 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/product.css">
-  <link rel="stylesheet" href="css/ixcache.css">
   <link rel="stylesheet" href="css/panalog.css">
 </head>
 <body>
   <!-- header -->
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
   <!-- main -->
   <div class="main">
     <section class="outer-section">
@@ -28,7 +25,7 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
         </div>
       </div>
        <!-- 中间图片 -->
-      <div class="product-img">
+      <div class="product-computer">
         <img src="img/computer1.png" alt="">
       </div>
       <div class="content-bottom"></div>
@@ -44,7 +41,11 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
     </section>
     <section>
       <div class="content3">
-        <h1 class="content-title">网络内容加速，超爽体验</h1>
+        <div>
+          <h1 class="content-title">简单部署海量数据管理</h1>
+          <p style="text-align: center">支持八大类资源缓存</p>
+          <p style="text-align: left">Panabit运营商版专门为千兆网络和万兆网络环境提供的一款高性能、高可用性、功能丰富、并预留一定升级扩容空间的骨干网出口优化设备。最大处理能力可达20Gbps，适用于同时在线4000-500000人以下的运营商、高校、能源、大型企业集团客户。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
+        </div>
       </div>
     </section>
     <section>
@@ -52,15 +53,15 @@ scrolling="no" src="headerBottom.html" frameborder=0></iframe>
         <h1 class="content-title">更全面的上网日志记录</h1>
       </div>
     </section>
-    <section class="content4 content5">
+    <section class="content5">
       <h1 class="content-title">更广泛的内容审计</h1>
       <ul class="row">
         <li class="col-md-3">流量日志、应用日志</li>
-        <li class="col-md-3">流量流向</li>
+        <li class="col-md-2">流量流向</li>
         <li class="col-md-3">域名统计</li>
-        <li class="col-md-3">应用节点日志 （如游戏服务器地址、土豆服务器地址）</li>
+        <li class="col-md-4">应用节点日志<br>（如游戏服务器地址、土豆服务器地址）</li>
         <li class="col-md-3">IP日志、NAT日志</li>
-        <li class="col-md-3">用户行为分析</li>
+        <li class="col-md-2">用户行为分析</li>
         <li class="col-md-3">敏感事件日志、微博、QQ、URL、淘宝</li>
       </ul>
     </section>
