--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -37,13 +37,13 @@ scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
         </div>
       </div>
        <!-- 中间图片 -->
-      <!-- <div class="product-img">
-        <img src="img/product-areas.png" alt="">
-      </div> -->
+      <div class="product-img" style="top:305px">
+        <img src="img/product-netcafe.png" alt="">
+      </div>
       <div class="content2">
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
-          <ul class="row">
+          <ul class="row" style="text-align: center;padding:40px 400px 100px;">
             <li class="col-md-4"><img src="img/product-areas-block1.png" alt=""></li>
             <li class="col-md-4"><img src="img/product-areas-block2.png" alt=""></li>
             <li class="col-md-4"><img src="img/product-areas-block3.png" alt=""></li>
@@ -99,10 +99,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
           <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
         </ul>
       </div>
-    </section>
-    <section class="outer-section bottom-promote">
-      <h1>免费体验派网产品</h1>
-      <button>现在注册</button>
     </section>
   </div>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
