二级页面current效果

--- a/footer.html
+++ b/footer.html
@@ -28,7 +28,7 @@
               <li><a href="" target="_top">产品</a></li>
               <li><a href="" target="_top">解决方案</a></li>
               <li><a href="" target="_top">客户案例</a></li>
-              <li><a href="" target="_top">新闻</a></li>
+              <li><a href="./aboutNews.html" target="_top">新闻</a></li>
             </ul>
           </div>
         </div>
@@ -57,9 +57,9 @@
           <div class="widget">
             <h4 class="title">关于我们</h4>
             <ul>
-              <li><a href="./aboutNews.html">公司简介</a></li>
-              <li><a href="" target="_top">联系我们</a></li>
-              <li><a href="" target="_top">招贤纳才</a></li>
+              <li><a href="./aboutIndex.html" target="_top">公司简介</a></li>
+              <li><a href="./aboutContact.html" target="_top">联系我们</a></li>
+              <li><a href="./aboutJob.html" target="_top">招贤纳才</a></li>
             </ul>
           </div>
         </div>
@@ -91,8 +91,6 @@
   <script>
     let footerLink = document.querySelector('#footerLink');
     footerLink.onclick = () => {
-      // window.location.href=""
-      console.log('点击')
     }
   </script>
 </body>
