--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -15,7 +15,7 @@
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="productBottomHeader.html" frameborder=0></iframe> 
+scrolling="no" src="productBottomHeader.html" frameborder=0 current="productNetcafe"></iframe> 
   <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left">
