--- a/aboutClient.html
+++ b/aboutClient.html
@@ -15,7 +15,7 @@
   
   <!-- bottom-nav -->
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
+scrolling="no" src="headerBottom.html" frameborder=0 current="aboutClient"></iframe> 
   <!-- main -->
   <div class="main">
     <section class="outer-section content1 content1_banner">
