--- a/aboutNews.html
+++ b/aboutNews.html
@@ -14,7 +14,7 @@
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0></iframe> 
+scrolling="no" src="headerBottom.html" frameborder=0 current="aboutNews"></iframe> 
   <!-- main -->
   <div class="main">
     <section class="outer-section content1 content1_banner">
