--- a/productAreas.html
+++ b/productAreas.html
@@ -14,7 +14,7 @@
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="productBottomHeader.html" frameborder=0></iframe>
+scrolling="no" src="productBottomHeader.html" frameborder=0 current="productAreas"></iframe>
   <!-- <iframe src="" frameborder="0"></iframe> -->
   <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
