修改导航栏hover跟链接效果

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
   <!-- main -->
   <div class="main">
     <section class="outer-section product">
-      <div class="row">
-        <div class="col-md-4">
+      <div class="row product-navbar">
+        <div class="col-md-4" onclick="linkHtml('index.html')">
           <p>智能应用网关</p>
           <p>Panabit</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" onclick="linkHtml('ixcache.html')">
           <p>内容缓存加速</p>
           <p>iXCache</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" onclick="linkHtml('panalog.html')">
           <p>数据存留审计</p>
           <p>Panalog</p>
         </div>
@@ -161,7 +161,7 @@
   // 链接
   function linkHtml (link) {
     window.location.href=link
-  }      
+  }
 </script>
 </body>
 </html>
