解决方式改解决方案， solution添加表格

--- a/productIsp.html
+++ b/productIsp.html
@@ -64,7 +64,7 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productIsp"
       </div>
     </section>
     <section class="outer-section case">
-      <h1 class="content-title">解决方式</h1>
+      <h1 class="content-title">解决方案</h1>
       <div class="row case-content">
         <div class="col-md-3">
           <img src="img/case1.jpg" alt="">
