--- a/solution.html
+++ b/solution.html
@@ -46,7 +46,7 @@
       </div>
     </section>
     <section class="outer-section case">
-      <h1 class="content-title">解决方式</h1>
+      <h1 class="content-title">解决方案</h1>
       <div class="row case-content">
         <div class="col-md-3">
           <img src="img/case1.jpg" alt="">
@@ -65,6 +65,87 @@
           <p>智能应用网关网络出口解决方案</p>
         </div>
       </div>
+    </section>
+    <section class="outer-section size">
+      <h1 class="content-title">运营商版规格型号</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <td>型号</td>
+            <td>吞吐</td>
+            <td>用户规模</td>
+            <td>电口</td>
+            <td>光口</td>
+            <td>电源</td>
+            <td>产品说明</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>PA-120</td>
+            <td>80Mbps</td>
+            <td>120</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PA-300</td>
+            <td>100Mbps</td>
+            <td>300</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PA-500</td>
+            <td>120Mbps</td>
+            <td>500</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PA-1000</td>
+            <td>300Mbps</td>
+            <td>1000</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PA-1600</td>
+            <td>600Mbps</td>
+            <td>1600</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PH-3510</td>
+            <td>130Mbps</td>
+            <td>400</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PH-3580</td>
+            <td>600Mbps</td>
+            <td>800</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </div>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
