--- a/footer.html
+++ b/footer.html
@@ -70,7 +70,7 @@
             <h4 class="title">关注我们</h4>
             <div class="attention">
               <span></span>
-              <span></span>
+              <span onclick="linkHtml('http://www.weibo.com/panabit', true)"></span>
               <span></span>
               <span></span>
             </div>
@@ -88,6 +88,7 @@
         </div>
     </div>
   </div>
+  <script src="js/common.js"></script>
   <script>
     let footerLink = document.querySelector('#footerLink');
     footerLink.onclick = () => {
