--- a/footer.html
+++ b/footer.html
@@ -25,9 +25,9 @@
             <ul>
               <li><a href="" target="_top">为何选择派网</a></li>
               <li><a href="" target="_top">免费试用</a></li>
-              <li><a href="" target="_top">产品</a></li>
-              <li><a href="" target="_top">解决方案</a></li>
-              <li><a href="" target="_top">客户案例</a></li>
+              <li><a href="./productIsp.html" target="_top">产品</a></li>
+              <li><a href="./solution.html" target="_top">解决方案</a></li>
+              <li><a href="./aboutClient.html" target="_top">客户案例</a></li>
               <li><a href="./aboutNews.html" target="_top">新闻</a></li>
             </ul>
           </div>
@@ -47,9 +47,9 @@
             <h4 class="title">合作伙伴</h4>
             <ul>
               <li><a href="" target="_top">申请加盟</a></li>
-              <li><a href="" target="_top">PN管理</a></li>
-              <li><a href="" target="_top">网吧版后台</a></li>
-              <li><a href="" target="_top">合作伙伴登陆</a></li>
+              <li><a href="https://115.28.107.42:31443/login.php" target="_blank">PN管理</a></li>
+              <li><a href="https://115.28.107.42:51443/Products/wangba/login.php" target="_blank">网吧版后台</a></li>
+              <li><a href="https://partner.panabit.com/" target="_blank">合作伙伴登陆</a></li>
             </ul>
           </div>
         </div>
