--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>北京派网软件有限公司</title>
+  <meta charset="UTF-8">
+  <title>北京派网软件有限公司</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -34,12 +34,13 @@
   <!-- header -->
   <div class="content1 swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" onclick="linkHtml('index.html')">
+        <div class="swiper-slide" onclick="linkHtml('solution.html')">
           <img src="img/panabit-banner1.jpg" alt="">
           <div class="banner-title">
             <h1>国内领先的网络应用层解决方案供应商</h1>
             <p>基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统</p>
           </div>
+          <div class="hack"></div>
         </div>
         <div class="swiper-slide" onclick="linkHtml('ixcache.html')">
           <img src="img/panabit-banner2.jpg" alt="">
@@ -47,6 +48,7 @@
             <h1>iXCache内容缓存加速</h1>
             <p>给我一点空间，我会将你的网络变成小宇宙</p>
           </div>
+          <div class="hack"></div>
         </div>
         <div class="swiper-slide" onclick="linkHtml('panalog.html')">
           <img src="img/panabit-banner3.jpg" alt="">
@@ -54,6 +56,7 @@
             <h1>Panalog运营商日志留存</h1>
             <p>网络大数据基石，让网络开挂者无所遁形</p>
           </div>
+          <div class="hack"></div>
         </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -61,8 +64,8 @@
   <!-- main -->
   <div class="main">
     <section class="outer-section product">
-      <div class="row product-navbar">
-        <div class="col-md-4" onclick="linkHtml('index.html')">
+      <div class="product-navbar banner-button row">
+        <div class="col-md-4" onclick="linkHtml('solution.html')">
           <p>智能应用网关</p>
           <p>Panabit</p>
         </div>
@@ -161,7 +164,7 @@
   // 链接
   function linkHtml (link) {
     window.location.href=link
-  }
+  }      
 </script>
 </body>
 </html>
